--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -12,36 +12,41 @@
 </head>
 
 <body>
+    <section>
+        <div class="up-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col">Вход | Регистрация</div>
+                    <div class="col">Тел. +372 00000000 | E-post@post.com</div>
+                </div>
+            </div>
+        </div>
 
-    <div class="up-1">
         <div class="container">
             <div class="row">
-                <div class="col">Вход | Регистрация</div>
-                <div class="col">Тел. +372 00000000 | E-post@post.com</div>
+                <div class="col" style="text-align: center; padding-right: -100px;">
+                    <img src="assets/img/logo/logo1.png" alt="">
+                </div>
+
+                <div class="col">
+                    <a href="#" style="text-decoration: none;"><b><p class="up-2">Каталог</p></b></a>
+                </div>
+                <div class="col">
+                    <a href="#" style="text-decoration: none;"><b><p class="up-2">Акции</p></b></a>
+                </div>
+                <div class="col">
+                    <a href="#" style="text-decoration: none;"><b><p class="up-2" >О нас</p></b></a>
+                </div>
+                <div class="col">
+                    <a href="#" style="text-decoration: none;"><b><p class="up-2" ><a href="#"></a>Контакты</a></p></b>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="container">
-        <div class="row">
-            <div class="col" style="text-align: center; padding-right: -100px;">
-                <img src="assets/img/logo/logo1.png" alt="">
-            </div>
-
-            <div class="col">
-                <p class="up-2">Каталог</p>
-            </div>
-            <div class="col">
-                <p class="up-2">Акции</p>
-            </div>
-            <div class="col">
-                <p class="up-2" >О нас</p>
-            </div>
-            <div class="col">
-                <p class="up-2" >Контакты</p>
-            </div>
-        </div>
-    </div>
+    <section>
+        <img src="assets/img/logo/bg1.jpg">
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
